tests/type-errors/no_container_subset_var.arl
archetype no_container_subset_var

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et subset;
}

entry start () {
	effect {
		var ev : et subset = [];
		require (ev.count() = 0)
	}
}
